--- a/leanchatlib/src/main/res/values/strings.xml
+++ b/leanchatlib/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="chat_release_to_refresh">释放立即刷新</string>
     <string name="chat_refreshing">正在刷新…</string>
 
+    <string name="load_more_footer_hint_normal">查看更多</string>
 </resources>
