--- a/leanchatlib/src/main/res/values/strings.xml
+++ b/leanchatlib/src/main/res/values/strings.xml
@@ -50,4 +50,7 @@
     <string name="chat_refreshing">正在刷新…</string>
 
     <string name="load_more_footer_hint_normal">查看更多</string>
+
+    <string name="login">进入聊天室</string>
+    <string name="login_null_name_tip">请输入用户名</string>
 </resources>
